<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_l"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/mainToAddButton"
        android:layout_width="180dp"
        android:layout_height="84dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="124dp"
        android:text="@string/add_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainToPantryButton"
        android:layout_width="180dp"
        android:layout_height="84dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:text="@string/pantry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToAddButton" />

    <Button
        android:id="@+id/mainToShoppingButton"
        android:layout_width="180dp"
        android:layout_height="84dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:text="@string/shopping_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToPantryButton" />

    <Button
        android:id="@+id/mainToSettingsButton"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="40dp"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToShoppingButton" />
</androidx.constraintlayout.widget.ConstraintLayout>